@@ -1,6 +1,8 @@
 
 USER LEVEL CHANGES
 
+-- Added the scalarComponents argument to addSampler method of MCMC configuration objects, which enables adding independent univariate samplers to all scalar componets of a specified target node or variable.
+
 BUG FIXES
 
 -- Fixed a bug in corner case of MCMC conjugacy checking system, when linear scale of target node is identically equal to zero.
